--- a/game.html
+++ b/game.html
@@ -1,21 +1,16 @@
 <script>
-
 // declare variables
-	var nameguess, nameactual, outputmsg;
+	var nameguess;
 
-// set  variables
-	nameactual = "thomas";
-	console.log("Hint: My initians are E.T.");
+// test user input
+	console.log("Hint: My initials are E.T.");
 	nameguess = prompt("Guess Elliot's middle name, if you dare!");
-
-// check for correct/incorrect answer
-	if (nameguess.toLowerCase() === nameactual) {
-		outputmsg = "Congratulations, you can now call me an extraterrestrial!"
-	} else {
-		outputmsg = "Sorry, you were wrong!"
-	}
-
-// output answer
-	window.alert(outputmsg)
-
+  do { 
+  	if (nameguess.toLowerCase() === "thomas") {
+  		alert("Congratulations! You can now call me an extra terrestrial!");
+  	} else {
+  		nameguess = prompt("That was incorrect. Try again!");
+  	}	
+  }
+  while (nameguess != "thomas");
 </script>
