removed copies of files, added html, abbreviated loop/if statement

--- a/game remix.html
+++ b/game remix.html
@@ -24,17 +24,18 @@
   	}
   }
   while (nameguess != "thomas");
+</script>
 
-// html work in progress
 <!--
-//  Look up onsubmit and onclick event functions
+  Look up onsubmit and onclick event functions
 
 -->
-// <form>
-// <input type="radio" name="bill" value="Bill" checked>Male
-// <br>
-// <input type="radio" name="peter" value="Peter">Female
-// </form>
-</script>
+<form>
+<input type="radio" name="bill" value="Bill" checked>Male
+<br>
+<input type="radio" name="peter" value="Peter">Female
+</form>
+
+
 </body>
 </html>
