index page is ready for javascript back end. Most inputs/outputs are complete

--- a/game_remix.html
+++ b/game_remix.html
@@ -8,12 +8,16 @@
     }
 
   // test user input
-    var thomasConstructor = new constructor("thomas", 1, prompt("Guess Elliot's middle name if you dare!"));
-    // var mauriceConstructor = new constructor("maurice", 1, "");
+    var ElliotSimpson = new constructor("thomas", 1, prompt("Guess Elliot's middle name if you dare!"));
+    // var TristanConant = new constructor("maurice", 1, prompt("Guess Tristan's middle name if you dare!")); "Cool runnings: Yo, you dead mon?"
+    // William Thomas Shull "he's the tank engine!"
+    // Sue Renee Rosenfield-Hernandez  "it's French"
 
-    while (thomasConstructor.nameGuess != thomasConstructor.correctAnswer); {
-        thomasConstructor.nameGuess = prompt("Hint: my initials are E.T. You have incorretly guessed " + thomasConstructor.loopCount + " times!");
-        thomasConstructor.loopCount++;
+
+
+    while  ElliotSimpson.nameGuess != ElliotSimpson.correctAnswer); {
+        ElliotSimpson.nameGuess = prompt("Hint: my initials are E.T. You have incorretly guessed " + ElliotSimpson.loopCount + " times!");
+        ElliotSimpson.loopCount++;
     }
     alert("Congratulations! You can now call me an extra terrestrial!");
 
